# jenkins-trials

./: CMakeLists.txt  Makefile  README.md  main.cpp
doc/: Makefile  doxy.conf
env/: Dockerfile
src/: CMakeLists.txt  CTestBase.h  CTestDerive.h  Makefile  main.cpp
test/: CMakeLists.txt  Makefile  main.cpp  test_CTestBase.cpp  test_CTestDerive.cpp  test_CTestFixture.h  test_Workload.cpp  test_common.h
